2005-05-03  Albert Chu  <chu11@llnl.gov>

	* Rework config file and config module into one load_config
	libcerebro call.  Rework libcerebro and cerebrod around this new
	API.

	* Various library cleanup.
	
2005-05-02  Albert Chu  <chu11@llnl.gov>

	* Add config file funcs into libcerebro.

	* Work config file loading/unloading into libcerebro updown library.
	
	* Work config file funcs in cerebrod.

	* Renamed cerebrod.conf.5.in to cerebro.conf.5.in.  Re-work for
	new configuration options and generalize for all of cerebro.

	* Manpage cleanup.
	
2005-05-01  Albert Chu  <chu11@llnl.gov>

	* Rework cerebro lib and cerebrod daemon to use default module so
	that binaries do not need to be aware of whether a module is
	loaded or not.
	
2005-04-30  Albert Chu  <chu11@llnl.gov>

	* Removed none module.

	* Reworked cerebro lib and cerebrod daemon to assume none module
	behavior when a clusterlist module is not loaded.

	* Remove clusterlist and config configuration command line options
	and configuration file options.  Now modules are searched for and
	that's it.

	* Make hostsfile module configurable at compile time.
	
2005-04-29  Albert Chu  <chu11@llnl.gov>

	* Added parse_options function to config modules.

	* Create new libmodule for common parse_options code between
	  clusterlist and config modules.

	* Putting module search and loading into libcerebro.

	* Rework cerebrod to use new libcerebro module functions.

	* Remove -c and -m options from cerebrod in non-debug mode.

	* Support clusterlist modules in libcerebro updown library.

	* Fixed various bugs.
	
2005-04-28  Albert Chu  <chu11@llnl.gov>

	* Re-worked packet unmarshalling logic.

	* Fixed updown server to handle more error conditions.

	* Allow updown server to return invalid packet format error code.

	* Shorten hostnames in hostsfile clusterlist module.

	* src/cerebrod/cerebrod_updown.c
	(_cerebrod_updown_create_and_setup_socket): Turn on SO_REUSEADDR
	for server debugging.
