@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro.h,v 1.9 2005-05-02 18:19:25 achu Exp $
+ *  $Id: cerebro.h,v 1.10 2005-05-04 00:20:55 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBRO_H
@@ -22,10 +22,11 @@
 #define CEREBRO_ERR_NODE_NOTFOUND        14
 #define CEREBRO_ERR_OUTMEM               15 
 #define CEREBRO_ERR_CONFIG_FILE          16
-#define CEREBRO_ERR_CLUSTERLIST_MODULE   17
-#define CEREBRO_ERR_CONFIG_MODULE        18
-#define CEREBRO_ERR_INTERNAL             19
-#define CEREBRO_ERR_ERRNUMRANGE          20
+#define CEREBRO_ERR_CONFIG_MODULE        17
+#define CEREBRO_ERR_CONFIG_INPUT         18
+#define CEREBRO_ERR_CLUSTERLIST_MODULE   19
+#define CEREBRO_ERR_INTERNAL             20
+#define CEREBRO_ERR_ERRNUMRANGE          21
 
 typedef struct cerebro *cerebro_t;
 
@@ -79,6 +80,42 @@ char *cerebro_errormsg(cerebro_t handle);
  * Output a message to standard error
  */
 void cerebro_perror(cerebro_t handle, const char *msg);
+
+/* 
+ * cerebro_load_config
+ *
+ * Read and load config file data
+ *
+ * Returns 0 on success, -1 on error
+ */
+int cerebro_load_config(cerebro_t handle);
+
+/* 
+ * cerebro_api_load_config
+ *
+ * Unload config file info
+ *
+ * Returns 0 on success, -1 on error
+ */
+int cerebro_unload_config(cerebro_t handle);
+
+/* 
+ * cerebro_load_clusterlist_module
+ *
+ * Find and load clusterlist module
+ *
+ * Returns 1 if clusterlist module was loaded, 0 if not, -1 on fatal error
+ */
+int cerebro_load_clusterlist_module(cerebro_t handle);
+
+/* 
+ * cerebro_unload_clusterlist_module
+ *
+ * Unload clusterlist module
+ *
+ * Returns 0 on success, -1 on error
+ */
+int cerebro_unload_clusterlist_module(cerebro_t handle);
 
 /* 
  * Up-Down API
