@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_updown.c,v 1.22 2005-05-03 23:41:40 achu Exp $
+ *  $Id: cerebro_updown.c,v 1.23 2005-05-04 00:20:55 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -104,6 +104,9 @@ _cerebro_updown_protocol_err_conversion(u_int32_t protocol_error)
     case CEREBRO_UPDOWN_PROTOCOL_ERR_TIMEOUT_INVALID:
     case CEREBRO_UPDOWN_PROTOCOL_ERR_INTERNAL_SYSTEM_ERROR:
     default:
+      cerebro_err_debug_lib("%s(%s:%d): invalid protocol error code: %d",
+			    __FILE__, __FUNCTION__, __LINE__, 
+			    protocol_error);
       return CEREBRO_ERR_INTERNAL;
     }
 }
@@ -181,13 +184,22 @@ _cerebro_updown_request_marshall(cerebro_t handle,
   int ret, c = 0;
 
 #ifndef NDEBUG
-  if (!buffer || bufferlen < CEREBRO_UPDOWN_REQUEST_LEN)
+  if (!buffer)
     {
-      cerebro_err_debug_lib("%s(%s:%d): invalid parameters",
+      cerebro_err_debug_lib("%s(%s:%d): buffer null",
 			    __FILE__, __FUNCTION__, __LINE__);
       handle->errnum = CEREBRO_ERR_INTERNAL;
       return -1;
     }
+
+  if (bufferlen < CEREBRO_UPDOWN_REQUEST_LEN)
+    {
+      cerebro_err_debug_lib("%s(%s:%d): bufferlen invalid",
+			    __FILE__, __FUNCTION__, __LINE__);
+      handle->errnum = CEREBRO_ERR_INTERNAL;
+      return -1;
+    }
+
 #endif /* NDEBUG */
 
   memset(buffer, '\0', bufferlen);
@@ -196,9 +208,6 @@ _cerebro_updown_request_marshall(cerebro_t handle,
                                     buffer + c, 
                                     bufferlen - c)) < 0)
     {
-      cerebro_err_debug_lib("%s(%s:%d): cerebro_marshall_int32: %s",
-			    __FILE__, __FUNCTION__, __LINE__,
-			    strerror(errno));
       handle->errnum = CEREBRO_ERR_INTERNAL;
       return -1;
     }
@@ -208,9 +217,6 @@ _cerebro_updown_request_marshall(cerebro_t handle,
                                      buffer + c, 
                                      bufferlen - c)) < 0)
     {
-      cerebro_err_debug_lib("%s(%s:%d): cerebro_marshall_uint32: %s",
-			    __FILE__, __FUNCTION__, __LINE__,
-			    strerror(errno));
       handle->errnum = CEREBRO_ERR_INTERNAL;
       return -1;
     }
@@ -220,9 +226,6 @@ _cerebro_updown_request_marshall(cerebro_t handle,
                                      buffer + c, 
                                      bufferlen - c)) < 0)
     {
-      cerebro_err_debug_lib("%s(%s:%d): cerebro_marshall_uint32: %s",
-			    __FILE__, __FUNCTION__, __LINE__,
-			    strerror(errno));
       handle->errnum = CEREBRO_ERR_INTERNAL;
       return -1;
     }
@@ -249,7 +252,7 @@ _cerebro_updown_response_unmarshall(cerebro_t handle,
 #ifndef NDEBUG
   if (!buffer)
     {
-      cerebro_err_debug_lib("%s(%s:%d): invalid parameters",
+      cerebro_err_debug_lib("%s(%s:%d): buffer null",
 			    __FILE__, __FUNCTION__, __LINE__);
       handle->errnum = CEREBRO_ERR_INTERNAL;
       return -1;
@@ -260,9 +263,6 @@ _cerebro_updown_response_unmarshall(cerebro_t handle,
                                       buffer + c,
                                       bufferlen - c)) < 0)
     {
-      cerebro_err_debug_lib("%s(%s:%d): cerebro_unmarshall_int32: %s",
-			    __FILE__, __FUNCTION__, __LINE__,
-			    strerror(errno));
       handle->errnum = CEREBRO_ERR_INTERNAL;
       return -1;
     }
@@ -275,9 +275,6 @@ _cerebro_updown_response_unmarshall(cerebro_t handle,
                                        buffer + c,
                                        bufferlen - c)) < 0)
     {
-      cerebro_err_debug_lib("%s(%s:%d): cerebro_unmarshall_uint32: %s",
-			    __FILE__, __FUNCTION__, __LINE__,
-			    strerror(errno));
       handle->errnum = CEREBRO_ERR_INTERNAL;
       return -1;
     }
@@ -290,9 +287,6 @@ _cerebro_updown_response_unmarshall(cerebro_t handle,
                                       buffer + c,
                                       bufferlen - c)) < 0)
     {
-      cerebro_err_debug_lib("%s(%s:%d): cerebro_unmarshall_uint8: %s",
-			    __FILE__, __FUNCTION__, __LINE__,
-			    strerror(errno));
       handle->errnum = CEREBRO_ERR_INTERNAL;
       return -1;
     }
@@ -306,9 +300,6 @@ _cerebro_updown_response_unmarshall(cerebro_t handle,
                                        buffer + c,
                                        bufferlen - c)) < 0)
     {
-      cerebro_err_debug_lib("%s(%s:%d): cerebro_unmarshall_buffer: %s",
-			    __FILE__, __FUNCTION__, __LINE__,
-			    strerror(errno));
       handle->errnum = CEREBRO_ERR_INTERNAL;
       return -1;
     }
@@ -321,9 +312,6 @@ _cerebro_updown_response_unmarshall(cerebro_t handle,
                                       buffer + c,
                                       bufferlen - c)) < 0)
     {
-      cerebro_err_debug_lib("%s(%s:%d): cerebro_unmarshall_uint8: %s",
-			    __FILE__, __FUNCTION__, __LINE__,
-			    strerror(errno));
       handle->errnum = CEREBRO_ERR_INTERNAL;
       return -1;
     }
@@ -689,7 +677,7 @@ cerebro_updown_load_data(cerebro_t handle,
 	{
 	  if (!handle->config_data.cerebro_updown_port)
 	    {
-	      handle->errnum = CEREBRO_ERR_CONFIG_FILE;
+	      handle->errnum = CEREBRO_ERR_CONFIG_INPUT;
 	      goto cleanup;
 	    }
 	  port = handle->config_data.cerebro_updown_port;
@@ -704,7 +692,7 @@ cerebro_updown_load_data(cerebro_t handle,
 	{
 	  if (!handle->config_data.cerebro_updown_timeout_len)
 	    {
-	      handle->errnum = CEREBRO_ERR_CONFIG_FILE;
+	      handle->errnum = CEREBRO_ERR_CONFIG_INPUT;
 	      goto cleanup;
 	    }
 	  timeout_len = handle->config_data.cerebro_updown_timeout_len;
@@ -722,7 +710,7 @@ cerebro_updown_load_data(cerebro_t handle,
 	      && handle->config_data.cerebro_updown_flags != CEREBRO_UPDOWN_UP_AND_DOWN_NODES)
 
 	    {
-	      handle->errnum = CEREBRO_ERR_CONFIG_FILE;
+	      handle->errnum = CEREBRO_ERR_CONFIG_INPUT;
 	      goto cleanup;
 	    }
 	  flags = handle->config_data.cerebro_updown_flags;
@@ -741,7 +729,7 @@ cerebro_updown_load_data(cerebro_t handle,
 	    {
 	      if ((rv = _cerebro_updown_get_updown_data(handle,
 							updown_data,
-							"localhost",
+							handle->config_data.cerebro_updown_hostnames[i],
 							port,
 							timeout_len,
 							flags)) < 0)
